--- a/templates/result.html
+++ b/templates/result.html
@@ -10,24 +10,49 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <style>
-        body {
-            padding: 20px;
-        }
-
-        h1 {
-            margin-bottom: 20px;
-        }
-
-        p {
-            margin-bottom: 10px;
-        }
-
-        .result-info {
-            max-width: 400px;
-            margin: auto;
-        }
-    </style>
+        <style>
+            body {
+                background-color: #2b2b2b;
+                color: #e6e6e6;
+                font-family: 'Comic Sans MS', cursive, sans-serif;
+            }
+    
+            .container {
+                margin-top: 4rem;
+                text-align: center;
+            }
+    
+            h1 {
+                color: #ff6666;
+                font-size: 3rem;
+                text-decoration: underline;
+            }
+    
+            img {
+                max-width: 80%;
+                height: auto;
+                margin-top: 2rem;
+                border: 3px solid #ffd700;
+                border-radius: 8px;
+            }
+    
+            a {
+                display: inline-block;
+                background-color: #ff6666;
+                color: #fff;
+                text-decoration: none;
+                padding: 0.7rem 1.5rem;
+                margin-top: 2rem;
+                border: none;
+                cursor: pointer;
+                font-size: 1.2rem;
+                border-radius: 8px;
+            }
+    
+            a:hover {
+                background-color: #ff4033;
+            }
+        </style>
 </head>
 <body>
     <div class="container">
